@@ -1,5 +1,5 @@
 /* xml.h -- xml output declarations.
-   $Id: xml.h,v 1.22 2004-07-31 18:49:51 karl Exp $
+   $Id: xml.h,v 1.23 2004-11-11 18:34:28 karl Exp $
 
    Copyright (C) 2001, 2002, 2003, 2004 Free Software Foundation, Inc.
 
@@ -49,22 +49,22 @@ extern int xml_keep_space;
 
 enum xml_element
 {
-  TEXINFO=0, SETFILENAME, TITLEFONT, SETTITLE, 
+  TEXINFO=0, SETFILENAME, TITLEFONT, SETTITLE, DOCUMENTDESCRIPTION,
   /* Node */
-  NODE /* 4 */, NODENEXT, NODEPREV, NODEUP,
+  NODE, NODENEXT, NODEPREV, NODEUP,
   /* Structuring */
-  CHAPTER /* 8 */, SECTION, SUBSECTION, SUBSUBSECTION,
-  TOP /* 12 */, UNNUMBERED, UNNUMBEREDSEC, UNNUMBEREDSUBSEC,
+  CHAPTER, SECTION, SUBSECTION, SUBSUBSECTION,
+  TOP, UNNUMBERED, UNNUMBEREDSEC, UNNUMBEREDSUBSEC,
     UNNUMBEREDSUBSUBSEC,  
-  APPENDIX /* 17 */, APPENDIXSEC, APPENDIXSUBSEC, APPENDIXSUBSUBSEC, 
-  MAJORHEADING /* 21 */, CHAPHEADING, HEADING, SUBHEADING, SUBSUBHEADING,
+  APPENDIX, APPENDIXSEC, APPENDIXSUBSEC, APPENDIXSUBSUBSEC, 
+  MAJORHEADING, CHAPHEADING, HEADING, SUBHEADING, SUBSUBHEADING,
   /* Titlepage */
-  TITLEPAGE /* 26 */, AUTHOR, BOOKTITLE, BOOKSUBTITLE,
+  TITLEPAGE, AUTHOR, BOOKTITLE, BOOKSUBTITLE,
   /* Menu */
-  MENU /* 30 */, DETAILMENU, MENUENTRY, MENUTITLE, MENUCOMMENT, MENUNODE,
+  MENU, DETAILMENU, MENUENTRY, MENUTITLE, MENUCOMMENT, MENUNODE,
   NODENAME,
   /* -- */
-  ACRONYM/* 37 */, ACRONYMWORD, ACRONYMDESC,
+  ACRONYM, ACRONYMWORD, ACRONYMDESC,
   ABBREV, ABBREVWORD, ABBREVDESC,
   TT, CODE, COMMAND_TAG, ENV, FILE_TAG, OPTION, SAMP, KBD, URL, KEY,
   VAR, SC, DFN, EMPH, STRONG, CITE, NOTFIXEDWIDTH, I, B, R,
